fix alignment
git-svn-id: https://www.redhotpenguin.com/svn/sl/trunk@1566 bd012f14-6cfe-0310-9a23-91b8f1fede10

--- a/SL-App/htdocs/css/app.css
+++ b/SL-App/htdocs/css/app.css
@@ -32,12 +32,13 @@ h1, h2, h3 {
 	padding: 0px;
 	font-weight: normal;
 	}
-	
+/*	
 a#banner-img {
 	display: block;
 	height: 100px;
 	background: #FFFFFF url("http://www.redhotpenguin.com/images/dashboard_banner.gif") 
 }
+*/
 
 a .banner-alt { display: none; }
 
@@ -54,19 +55,19 @@ a .banner-alt { display: none; }
 	left: 0px;
 	font-family: Verdana, Arial, sans-serif;
 	color: #336600;
-	background: #FFFFFF url("http://www.redhotpenguin.com/images/dashboard_banner.gif");
+/* 	background: #FFFFFF url("http://www.redhotpenguin.com/images/dashboard_banner.gif"); */
 	width: 280px;
     margin-left: 30px;
 	text-align: left;
 	padding: 0px;
-	border-bottom: 0px solid #999999;
 	height: 100px;
-	}
-	
+}
+
 #banner a {
 	color: #FFFFFF;
+	height: 100px;
 	text-decoration: none;
-	}
+}
 
 #banner h1 {
 	font-size: xx-large;
@@ -76,14 +77,13 @@ a .banner-alt { display: none; }
 
 #banner h2 {
 	display: none;
-	}
+}
 
 #settings {
    position: relative;
    top: 40px;
-   right: 100px;
+   left: 400px;
    overflow: hidden;
-   text-align: right;
 }
 
 #container {
@@ -102,7 +102,7 @@ a .banner-alt { display: none; }
 	position: relative;
 	top: 0px;
 	left: 10px;
-	width: 125px;
+	width: 150px;
 	background-color: #FFFFff;
 }
 
@@ -119,7 +119,7 @@ a .banner-alt { display: none; }
 #center {
 	position: absolute;
 	top: 0px;
-	left: 130px;
+	left: 160px;
 	width: 500px;
 	overflow: hidden;
 }
@@ -127,7 +127,7 @@ a .banner-alt { display: none; }
 #list_center {
 	position: absolute;
 	top: 0px;
-	left: 130px;
+	left: 160px;
 	overflow: hidden;
 }
 
